infra/k8s/demo-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-echo
  namespace: default
spec:
  selector:
    app: demo-echo
  ports:
    - port: 80
      targetPort: 5678
